<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="64dp">

    <TextView
        android:text="Prezio Logo"
        android:layout_marginTop="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:textSize="20sp"/>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/username"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"
        android:inputType="text"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/password"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textVisiblePassword"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/login"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg_highlight"
        android:text="@string/login_signin"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</LinearLayout>